Fix new banner images not working on IE

--- a/styles.css
+++ b/styles.css
@@ -184,10 +184,12 @@ header h1 {
   line-height: 40px;
   text-align: center;
   text-transform: uppercase;
+  z-index: 9999;
 }
 
 .banner::before {
   content: "";
+  display: block;
   position: absolute;
   width: 100%;
   height: 100%;
@@ -195,14 +197,16 @@ header h1 {
   background-attachment: fixed;
   background-position: center;
   z-index: -1;
+  background-color: red;
 }
 
 .banner::after {
   content: "";
+  display: block;
   position: absolute;
   width: 100%;
   height: 100%;
-  z-index: -1;
+  z-index: 0;
   background: linear-gradient(to bottom, rgba(0,0,0,0) 0%, rgba(0,0,0, 0.6) 100%);
 }
 
@@ -214,15 +218,15 @@ nav + article section.banner { /* If banner is first thing on page, account for 
   height: 90vh;
 }
 
-#team-banner::before {
+#team-banner, #team-banner::before {
   background-image: url("./images/team_unedited.jpg");
 }
 
-#goal-banner::before {
+#goal-banner, #goal-banner::before {
   background-image: url("./images/robot_unedited.jpg");
 }
 
-#competition-banner::before {
+#competition-banner, #competition-banner::before {
   background-image: url("./images/competition_unedited.jpg");
 }
 
